<resources>
    <string name="app_name">3D&amp;Termination</string>
    <string name="app_3dt_online">3DT Online</string>
    <string name="app_email">Email</string>
    <string name="app_senha">Senha</string>
    <string name="app_nome">Nome</string>
    <string name="app_confirmar_senha">Confirmar senha</string>
    <string name="app_cadastre">Cadastre-se</string>
    <string name="app_criar_conta">Criar conta</string>
    <string name="app_bem_vindo">Bem vindo!</string>
    <string name="app_voltar">Voltar</string>
    <string name="app_entrar">Entrar</string>
    <string name="app_movo_aqui">Novo aqui? crie uma conta</string>
    <string name="app_criar_personagem">Criar personagem</string>
    <string name="app_esqueci_senha">Esqueci minha senha</string>
    <string name="app_trocar_senha">Trocar senha</string>
    <string name="app_nova_senha">Nova senha</string>
    <string name="app_repetir_senha">Repetir senha</string>
    <string name="app_historia">História</string>
    <string name="app_dinheiro_itens">Dinheiro e itens</string>
    <string name="app_magia_conhecida">Magia Conhecida</string>
    <string name="app_tipo_dano">Tipo Dano</string>
    <string name="app_descantagens">Desvantagens</string>
    <string name="app_vantagens">Vantagens</string>
    <string name="app_ponto_experiencia">Ponto Experiência</string>
    <string name="app_ponto_magia">Ponto Magia</string>
    <string name="app_ponto_vida">Ponto Vida</string>
    <string name="app_poder_fogo">Poder Fogo</string>
    <string name="app_armadura">Armadura</string>
    <string name="app_resistencia">Resistência</string>
    <string name="app_habilidade">Habilidade</string>
    <string name="app_forca">Força</string>
    <string name="app_ponto">Ponto</string>
    <string name="app_esqueceu_senha">Esqueceu sua senha?</string>
    <string name="app_frase_esqueci">Insira o seu e-mail e a nova senha no campo abaixo para restaurarmos sua senha</string>
    <string name="app_meus_personagens">Meus personagens</string>
    <string name="app_editar">Editar</string>
    <string name="app_detalhes">Detalhes</string>
    <string name="app_entra_chat">Entrar no chat</string>
    <string name="app_salvar">Salvar</string>
    <string name="app_notification">Luis, entrou na sala.</string>
    <string name="app_partner_name">Luis</string>
    <string name="app_partner_text">Meu nome é Luis</string>
    <string name="app_chat_user">Você é um usuario!</string>
    <string name="app_entrace_nick">Defina seu Nickname</string>
    <string name="app_entrace_sala">Informe o ID da sala para entrar</string>
    <string name="app_start">S  T  A  R  T</string>
    <string name="app_lobby">Looby</string>
    <string name="app_enviar_mensagem">Enviar mensagem...</string>
    <string name="app_mestre">Criar Mestre</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>
