<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/cadastroimagem"
    tools:context=".EsqueceuSenha">

    <FrameLayout
        android:id="@+id/topbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
    </FrameLayout>

    <TextView
        android:id="@+id/criaPerson"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_below="@+id/topbar"
        android:layout_marginVertical="1dp"
        android:background="@drawable/subtitulotop"
        android:gravity="center"
        android:text="@string/app_esqueci_senha"
        android:textColor="#F7FF00"
        android:textSize="20sp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/criaPerson"
        android:layout_marginHorizontal="100dp"
        android:layout_marginTop="70dp"
        android:text="@string/app_frase_esqueci"
        android:textColor="@color/colorWhite"
        android:textSize="15sp" />

    <EditText
        android:id="@+id/esqueciEmail"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:layout_marginHorizontal="30dp"
        android:background="@color/colorBackground"
        android:drawableLeft="@mipmap/ic_email"
        android:hint="@string/app_email"
        android:imeActionLabel="Search"
        android:inputType="textEmailAddress" />

    <EditText
        android:id="@+id/esqueciSenha"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/esqueciEmail"
        android:layout_centerInParent="true"
        android:layout_marginHorizontal="30dp"
        android:layout_marginTop="20dp"
        android:background="@color/colorBackground"
        android:drawableLeft="@mipmap/ic_senha"
        android:hint="@string/app_nova_senha"
        android:inputType="textPassword" />

    <EditText
        android:id="@+id/esqueciRepeteSenha"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/esqueciSenha"
        android:layout_centerInParent="true"
        android:layout_marginHorizontal="30dp"
        android:layout_marginTop="20dp"
        android:background="@color/colorBackground"
        android:drawableLeft="@mipmap/ic_senha"
        android:hint="@string/app_repetir_senha"
        android:inputType="textPassword" />

    <Button
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_below="@id/esqueciRepeteSenha"
        android:layout_centerInParent="true"
        android:layout_marginTop="40dp"
        android:background="@drawable/botao_customizado"
        android:onClick="checkNull"
        android:text="@string/app_trocar_senha"
        android:textColor="@color/colorWhite" />

</RelativeLayout>