<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/cadastroimagem"
    tools:context=".MeusPersonagens">

    <FrameLayout
        android:id="@+id/topbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
    </FrameLayout>

    <TextView
        android:id="@+id/meusPerson"
        android:layout_width="match_parent"
        android:layout_height="35dp"
        android:layout_below="@id/topbar"
        android:layout_marginVertical="1dp"
        android:background="@drawable/subtitulotop"
        android:gravity="center"
        android:text="@string/app_meus_personagens"
        android:textColor="#F7FF00"
        android:textSize="20sp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent" />

    <HorizontalScrollView
        android:id="@+id/scroll"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/meusPerson">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <androidx.cardview.widget.CardView
                android:id="@+id/card1"
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:layout_marginHorizontal="20dp"
                android:layout_marginTop="8dp"
                android:onClick="mostrarCard1">

                <ImageView
                    android:id="@+id/card1_image"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:src="@mipmap/ic_arqueiro_round" />
            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:id="@+id/card2"
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:layout_marginHorizontal="20dp"
                android:layout_marginTop="8dp"
                android:onClick="mostrarCard2">

                <ImageView
                    android:id="@+id/card2_image"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:src="@mipmap/ic_demon_round" />
            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:id="@+id/card3"
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:layout_marginHorizontal="20dp"
                android:layout_marginTop="8dp"
                android:onClick="mostrarCard3">

                <ImageView
                    android:id="@+id/card3_image"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:src="@mipmap/ic_mago_round" />
            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:id="@+id/card4"
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:layout_marginHorizontal="20dp"
                android:layout_marginTop="8dp"
                android:onClick="mostrarCard4">

                <ImageView
                    android:id="@+id/card4_image"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:src="@mipmap/ic_invoquer_round" />
            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:id="@+id/card5"
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:layout_marginHorizontal="20dp"
                android:layout_marginTop="8dp"
                android:onClick="mostrarCard5">

                <ImageView
                    android:id="@+id/card_image"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:src="@mipmap/ic_tank_round" />
            </androidx.cardview.widget.CardView>
        </LinearLayout>
    </HorizontalScrollView>

    <TextView
        android:id="@+id/meusDetalhes"
        android:layout_width="match_parent"
        android:layout_height="35dp"
        android:layout_below="@id/scroll"
        android:layout_marginVertical="1dp"
        android:layout_marginTop="25sp"
        android:background="@drawable/subtitulotop"
        android:gravity="center"
        android:text="@string/app_detalhes"
        android:textColor="#F7FF00"
        android:textSize="20sp" />

    <Button
        android:id="@+id/btSalvar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/meusDetalhes"
        android:layout_alignParentLeft="true"
        android:layout_marginStart="30dp"
        android:layout_marginTop="10dp"
        android:background="@drawable/botao_customizado"
        android:onClick="salvarEditarDetalhes"
        android:text="@string/app_salvar"
        android:textColor="@color/colorWhite" />

    <Button
        android:id="@+id/btEditar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/meusDetalhes"
        android:layout_marginStart="30dp"
        android:layout_marginTop="10dp"
        android:background="@drawable/botao_customizado"
        android:onClick="editarDetalhes"
        android:text="@string/app_editar"
        android:textColor="@color/colorWhite" />

    <TextView
        android:id="@+id/nomeEditar"
        android:layout_width="210dp"
        android:layout_height="wrap_content"
        android:layout_below="@id/meusDetalhes"
        android:layout_marginHorizontal="20dp"
        android:layout_marginTop="10dp"
        android:layout_toEndOf="@id/btEditar"
        android:text="@string/app_nome"
        android:textColor="@color/colorWhite" />

    <EditText
        android:id="@+id/nomePersonagem"
        android:layout_width="230dp"
        android:layout_height="wrap_content"
        android:layout_below="@id/nomeEditar"
        android:layout_alignParentLeft="true"
        android:layout_marginStart="133dp"
        android:layout_marginTop="5dp"
        android:layout_marginEnd="0dp"
        android:background="@color/colorBackground"
        android:inputType="text"
        android:textColor="@color/colorBlack" />

    <ScrollView
        android:id="@+id/scrollDetalhes"
        android:layout_width="match_parent"
        android:layout_height="290dp"
        android:layout_below="@id/nomePersonagem"
        android:layout_marginTop="30dp">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/vantagensEditar"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="30dp"
                android:layout_marginTop="10dp"
                android:text="@string/app_vantagens"
                android:textColor="@color/colorWhite" />

            <EditText
                android:id="@+id/vantagensPersonEditar"
                android:layout_width="150dp"
                android:layout_height="80dp"
                android:layout_below="@id/vantagensEditar"
                android:layout_marginStart="30dp"
                android:background="@color/colorBackground"
                android:textColor="@color/colorBlack"
                android:textSize="12sp" />

            <TextView
                android:id="@+id/desvatagemCriar"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_marginStart="220dp"
                android:layout_marginTop="10dp"
                android:text="@string/app_descantagens"
                android:textColor="@color/colorWhite" />

            <EditText
                android:id="@+id/desvantagemPersonEditar"
                android:layout_width="150dp"
                android:layout_height="80dp"
                android:layout_below="@id/desvatagemCriar"
                android:layout_marginStart="220dp"
                android:background="@color/colorBackground"
                android:textColor="@color/colorBlack"
                android:textSize="12sp" />

            <TextView
                android:id="@+id/tipoDanoCriar"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/vantagensPersonEditar"
                android:layout_marginStart="30dp"
                android:layout_marginTop="10dp"
                android:text="@string/app_tipo_dano"
                android:textColor="@color/colorWhite" />

            <EditText
                android:id="@+id/tipoDanoPersonEditar"
                android:layout_width="150dp"
                android:layout_height="80dp"
                android:layout_below="@id/tipoDanoCriar"
                android:layout_marginStart="30dp"
                android:background="@color/colorBackground"
                android:textColor="@color/colorBlack"
                android:textSize="12sp" />

            <TextView
                android:id="@+id/magiaConhecidaCriar"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/vantagensPersonEditar"
                android:layout_marginStart="220dp"
                android:layout_marginTop="10dp"
                android:text="@string/app_magia_conhecida"
                android:textColor="@color/colorWhite" />

            <EditText
                android:id="@+id/magiaConhecidaEditar"
                android:layout_width="150dp"
                android:layout_height="80dp"
                android:layout_below="@id/magiaConhecidaCriar"
                android:layout_marginStart="220dp"
                android:background="@color/colorBackground"
                android:textColor="@color/colorBlack"
                android:textSize="12sp" />

            <TextView
                android:id="@+id/dinheiroItensCriar"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/tipoDanoPersonEditar"
                android:layout_marginStart="30dp"
                android:layout_marginTop="10dp"
                android:text="@string/app_dinheiro_itens"
                android:textColor="@color/colorWhite" />

            <EditText
                android:id="@+id/dinheiroItensEditar"
                android:layout_width="150dp"
                android:layout_height="80dp"
                android:layout_below="@id/dinheiroItensCriar"
                android:layout_marginStart="30dp"
                android:background="@color/colorBackground"
                android:textColor="@color/colorBlack"
                android:textSize="12sp" />

            <TextView
                android:id="@+id/historiaCriar"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/tipoDanoPersonEditar"
                android:layout_marginStart="220dp"
                android:layout_marginTop="10dp"
                android:text="@string/app_historia"
                android:textColor="@color/colorWhite" />

            <EditText
                android:id="@+id/historiaEditar"
                android:layout_width="150dp"
                android:layout_height="80dp"
                android:layout_below="@id/dinheiroItensCriar"
                android:layout_marginStart="220dp"
                android:background="@color/colorBackground"
                android:textColor="@color/colorBlack"
                android:textSize="12sp" />

        </RelativeLayout>
    </ScrollView>

    <Button
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:layout_below="@id/scrollDetalhes"
        android:layout_marginStart="30dp"
        android:layout_marginTop="20dp"
        android:background="@drawable/botao_customizado"
        android:onClick="trocarTelaCadastroPerson"
        android:text="@string/app_criar_personagem"
        android:textColor="@color/colorWhite" />

    <Button
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:layout_below="@id/scrollDetalhes"
        android:layout_marginStart="220dp"
        android:layout_marginTop="20dp"
        android:background="@drawable/botao_customizado"
        android:onClick="entrarChat"
        android:text="@string/app_entra_chat"
        android:textColor="@color/colorWhite" />
</RelativeLayout>