<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/cadastroimagem"
    tools:context=".CadastroMestre">

    <FrameLayout
        android:id="@+id/topbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
    </FrameLayout>

    <TextView
        android:id="@+id/criaPerson"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_below="@id/topbar"
        android:layout_marginVertical="1dp"
        android:background="@drawable/subtitulotop"
        android:gravity="center"
        android:textSize="20sp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent" />

    <Switch
        android:id="@+id/swichBolear"
        android:layout_width="wrap_content"
        android:layout_height="40dp"
        android:layout_below="@id/topbar"
        android:layout_centerInParent="true"
        android:onClick="telaPersonagem"
        android:switchPadding="20dp"
        android:text="@string/app_mestre"
        android:textColor="#F7FF00"
        android:textSize="20sp"
        android:thumbTint="@color/red" />

    <ImageView
        android:id="@+id/ivImageMestre"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_below="@id/criaPerson"
        android:layout_marginVertical="1dp"
        android:src="@drawable/iconusuario" />

    <TextView
        android:id="@+id/nomeCriarMestre"
        android:layout_width="210dp"
        android:layout_height="wrap_content"
        android:layout_below="@id/criaPerson"
        android:layout_marginStart="120sp"
        android:layout_marginTop="20dp"
        android:text="@string/app_nome"
        android:textColor="@color/white" />

    <EditText
        android:id="@+id/nomePersonagemMestre"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/nomeCriarMestre"
        android:layout_marginStart="120dp"
        android:layout_marginTop="5dp"
        android:layout_marginEnd="20dp"
        android:background="@color/colorBackground" />

    <TextView
        android:id="@+id/historiaMestre"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/ivImageMestre"
        android:layout_marginStart="30dp"
        android:layout_marginTop="20dp"
        android:text="@string/app_historia"
        android:textColor="@color/colorWhite" />

    <EditText
        android:id="@+id/historiaCriarMestre1"
        android:layout_width="match_parent"
        android:layout_height="90dp"
        android:layout_below="@id/historiaMestre"
        android:layout_marginStart="30dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="20dp"
        android:background="@color/colorBackground"
        android:textSize="12sp" />

    <TextView
        android:id="@+id/historiaMestre2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/historiaCriarMestre1"
        android:layout_marginStart="30dp"
        android:layout_marginTop="20sp"
        android:text="@string/app_historia"
        android:textColor="@color/colorWhite" />

    <EditText
        android:id="@+id/historiaCriarMestre2"
        android:layout_width="match_parent"
        android:layout_height="90dp"
        android:layout_below="@id/historiaMestre2"
        android:layout_marginStart="30dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="20dp"
        android:background="@color/colorBackground"
        android:textSize="12sp" />

    <TextView
        android:id="@+id/historiaMestre3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/historiaCriarMestre2"
        android:layout_marginStart="30dp"
        android:layout_marginTop="20sp"
        android:text="@string/app_historia"
        android:textColor="@color/colorWhite" />

    <EditText
        android:id="@+id/historiaCriarMestre3"
        android:layout_width="match_parent"
        android:layout_height="90dp"
        android:layout_below="@id/historiaMestre3"
        android:layout_marginStart="30dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="20dp"
        android:background="@color/colorBackground"
        android:textSize="12sp" />

    <Button
        android:id="@+id/bt_criar_mestre"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/historiaCriarMestre3"
        android:layout_centerHorizontal="true"
        android:layout_marginStart="200dp"
        android:layout_marginTop="30dp"
        android:background="@drawable/botao_customizado"
        android:onClick="criarMestre"
        android:text="@string/app_criar_personagem"
        android:textColor="@color/colorWhite" />
</RelativeLayout>