<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:background="@drawable/login">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:text="@string/app_3dt_online"
        android:textColor="#F7FF00"
        android:background="@drawable/titulotop"
        android:id="@+id/top3dt"
        android:textSize="20sp"
        android:gravity="center"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintLeft_toLeftOf="parent" />
    <ImageView
        android:layout_width="140dp"
        android:layout_height="98dp"
        android:src="@drawable/logo" />
    <EditText
        android:layout_marginHorizontal="30dp"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:id="@+id/email"
        android:hint="@string/app_email"
        android:textSize="30sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:background="@color/colorBackground" />

    <EditText
        android:id="@+id/senha"
        android:layout_marginHorizontal="30dp"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:hint="@string/app_senha"
        android:textColor="#FFFFFF"
        android:layout_marginTop="20dp"
        android:textSize="30sp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/email"
        android:background="@color/colorBackground"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Esqueceu sua senha?"
        android:textColor="#FFFFFF"
        android:id="@+id/esqueceuSenha"
        android:paddingTop="20dp"
        android:textSize="10sp"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/senha" />

    <Button
        android:background="@drawable/botao_customizado"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:text="Entrar"
        android:textColor="#FFFFFF"
        android:layout_marginTop="20dp"
        android:onClick="trocarTelaCadastroPerson"
        app:layout_constraintTop_toBottomOf="@id/esqueceuSenha"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:id="@+id/botaoEntrar"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Novo aqui? crie uma conta"
        android:textColor="#FFFFFF"
        android:id="@+id/textNovo"
        android:textSize="15sp"
        android:layout_marginTop="30dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/botaoEntrar" />
    <View
        android:id="@+id/divisor"
        android:layout_width="wrap_content"
        android:layout_height="1dip"
        app:layout_constraintTop_toBottomOf="@id/textNovo"
        android:background="#FFFFFF" />

    <Button
        android:background="#A6000000"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:textColor="#B2FFFFFF"
        android:layout_marginTop="30dp"
        android:text="Criar conta"
        android:onClick="trocarTelaCadastro"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/divisor"/>

</androidx.constraintlayout.widget.ConstraintLayout>